--- a/VisitorSummaryCard/package.json
+++ b/VisitorSummaryCard/package.json
@@ -6,13 +6,15 @@
   "dependencies": {
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
+    "@types/react-transition-group": "^4.4.0",
+    "css-loader": "^3.4.2",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "typescript": "^3.9.5",
+    "react-transition-group": "^4.4.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
-    "css-loader": "^3.4.2",
-    "node-sass": "^4.14.1"
+    "typescript": "^3.9.5"
   },
   "devDependencies": {
     "svg-url-loader": "^6.0.0",
