--- a/VisitorSummaryCard/package.json
+++ b/VisitorSummaryCard/package.json
@@ -1,26 +1,29 @@
 {
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "watch": "webpack --watch --config webpack.config.js"
+    "watch": "webpack --watch --config webpack.config.js",
+    "dev": "webpack-dev-server"
   },
   "dependencies": {
-    "@types/react": "^16.9.38",
+    "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
-    "@types/react-transition-group": "^4.4.0",
+    "@types/recharts": "^1.8.7",
     "css-loader": "^3.4.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-transition-group": "^4.4.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.5",
+    "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
+    "@types/react-transition-group": "^4.4.0",
+    "source-map-loader": "^0.2.4",
     "svg-url-loader": "^6.0.0",
     "ts-loader": "^7.0.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
-    "source-map-loader": "^0.2.4"
+    "webpack-dev-server": "^3.11.0"
   }
 }
