--- a/MAF/package.json
+++ b/MAF/package.json
@@ -5,6 +5,7 @@
     "dev": "webpack-dev-server"
   },
   "dependencies": {
+    "@nivo/bar": "^0.62.0",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/recharts": "^1.8.7",
